<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false">

    <RelativeLayout
        android:id="@+id/orderItemContainer"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/order_items_background"
        android:baselineAligned="false" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="7dp"
            android:paddingEnd="3dp"
            android:paddingBottom="3dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_baseline_shopping_cart_24_disabled"
            android:contentDescription="@string/cart_label"
            android:background="@drawable/shopping_cart_bg"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/orderPizzaImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_pizza"
                android:contentDescription="@string/pizza"
                android:visibility="gone" />

            <TextView
                android:id="@+id/orderPizzaTxt"
                android:background="@drawable/item_quantity"
                style="@style/orderItemQty" />

            <ImageView
                android:id="@+id/orderStreetImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_street_food"
                android:contentDescription="@string/street_food"
                android:visibility="gone" />

            <TextView
                android:id="@+id/orderStreetTxt"
                android:background="@drawable/item_quantity"
                style="@style/orderItemQty" />

            <ImageView
                android:id="@+id/orderDessertImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_dessert"
                android:contentDescription="@string/desserts"
                android:visibility="gone" />

            <TextView
                android:id="@+id/orderDessertTxt"
                android:background="@drawable/item_quantity"
                style="@style/orderItemQty" />

            <ImageView
                android:id="@+id/orderDrinksImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/color_drinks"
                android:contentDescription="@string/drinks"
                android:visibility="gone" />

            <TextView
                android:id="@+id/orderDrinksTxt"
                android:background="@drawable/item_quantity"
                style="@style/orderItemQty" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>